# qa-monitor

./: .gitignore  HANDOFF.md  README.md  ROADMAP.md  biome.json  package.json  tsconfig.base.json  turbo.json
apps/web/: README.md  components.json  next.config.ts  package.json  tsconfig.json
apps/web/app/: actions.ts  globals.css  layout.tsx  page.tsx
apps/web/app/api/analyze-findings/[slug]/: route.ts
apps/web/app/api/analyze/[slug]/: route.ts
apps/web/app/p/[slug]/: page.tsx
apps/web/components/: add-project-dialog.tsx  ai-analysis-panel.tsx  ai-summary-view.tsx  ai-summary.tsx  analyze-button.tsx  app-sidebar.tsx  checklist-card.tsx  checklist-view.tsx  expandable.tsx  findings-analysis.tsx  findings-section.tsx  global-search.tsx  metric.tsx  migration-compare.tsx  page-explorer.tsx  project-card.tsx  project-members.tsx  project-settings-dialog.tsx  regression-panel.tsx  run-button.tsx  run-trend.tsx  score-panel.tsx  screenshot-viewer.tsx  site-header.tsx  site-section.tsx  social-preview.tsx  sparkline.tsx  summary-cards.tsx
apps/web/components/ui/: button.tsx
apps/web/fixtures/: digdir.json  uutilsynet.json
apps/web/lib/: analysis-schema.ts  analyze.ts  checklist-catalog.ts  checklist-derive.ts  checklist.ts  github.ts  members.ts  migration.ts  projects.ts  regressions.ts  report.ts  score.ts  sitemap.ts  spawn-worker.ts  ui-helpers.ts
apps/worker-web/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/worker-web/reference/: validate_pages.py
apps/worker-web/worker_web/: __main__.py  db.py  env.py  server.py
(+1 files in other folders)
