[project]
name = "worker-web"
version = "0.0.0"
description = "qa-monitor web-valideringsworker (Python + Playwright)"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.49",
  "openpyxl>=3.1",
  "pillow>=11.0",
  "psycopg[binary]>=3.2",
  "python-dotenv>=1.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "vercel_blob>=0.4",
]

# App, ikke en pakke som skal bygges/installeres.
[tool.uv]
package = false
